--- a/NHS.Automation/FrameworkPython/configuration_files/ElementLocators.cnf
+++ b/NHS.Automation/FrameworkPython/configuration_files/ElementLocators.cnf
@@ -5,7 +5,7 @@ btn_login = //*[@class='login100-form-btn']
 Label_Hello_Admin = //*[@id='myhscic']
 
 [Home_Page]
-drop_down_click = //*[@id='trust_list']
+drop_down_click = //*[@id='trust_input']
 Label_one = //*[name()='svg']//*[name()='g']//*[text()='Trust RR3 vs Region R1']
 Label_RR1 = //*[name()='svg']//*[name()='g']//*[text()='RR3']
 Label_RR8 = //*[name()='svg']//*[name()='g']//*[text()='RR8']
@@ -15,3 +15,4 @@ Label_E1 = //*[name()='svg']//*[name()='g']//*[text()='E1']
 Label_E2 = //*[name()='svg']//*[name()='g']//*[text()='E2']
 Label_E3 = //*[name()='svg']//*[name()='g']//*[text()='E3']
 Label_E4 = //*[name()='svg']//*[name()='g']//*[text()='E4']
+logout_click = //*[@class='fa fa-chevron-circle-right fa-2x']
