--- a/NHS.Automation/FrameworkPython/configuration_files/TestConfigurations.cnf
+++ b/NHS.Automation/FrameworkPython/configuration_files/TestConfigurations.cnf
@@ -1,6 +1,6 @@
 [ConfigDetails]
 Test_Browser = Chrome
-Application_URL = http://172.16.243.211:8200/NHSD_POC/
+Application_URL = http://35.176.37.177:8085/NHSD_POC
 Exe_Path = ..\\chromedriver.exe
 Excel_Path = ../test_data/TestData.xlsx
 Excel_Sheet = Sheet1
