--- a/NHS.Automation/FrameworkPython/configuration_files/ElementLocators.cnf
+++ b/NHS.Automation/FrameworkPython/configuration_files/ElementLocators.cnf
@@ -6,8 +6,8 @@ Label_Hello_Admin = //*[@id='myhscic']
 
 [Home_Page]
 drop_down_click = //*[@id='trust_input']
-graph_label = //*[@id='region_display']
-image_region_vs_peer = //*[@id="chart3"]/a/img
+graph_label = //*[@id="region_display"]
+image_region_vs_peer = //*[@id="dvSidePanelRegions"]/a/img
 image_trust_vs_peer = //*[@id="dvSidePanelTvP"]/a/img
 logout_click = //*[@class='fa fa-chevron-circle-right fa-2x']
 Label_Transition_Time = //*[name()='svg']//*[name()='g']//*[text()='Transition Time (in days)']
