--- a/NHS.Automation/FrameworkPython/configuration_files/TestConfigurations.cnf
+++ b/NHS.Automation/FrameworkPython/configuration_files/TestConfigurations.cnf
@@ -3,15 +3,15 @@ Test_Browser = Chrome
 
 Application_URL = http://10.10.1.12:8085/NHSD_POC/
 # Windows Path will be removed once tested on server
-# Application_URL = http://35.176.37.177:8085/NHSD_POC/
+#Application_URL = http://35.176.37.177:8085/NHSD_POC/
 
 #Windows Path will be removed once tested on server
-# API_URL = http://35.176.37.177:8084/search_trust/
+#API_URL = http://35.176.37.177:8084/search_trust/
 # API_URL = http://10.10.1.12:8084/search_trust/
 
-Exe_Path = ..\\chromedriver.exe
+#Exe_Path = ..\\chromedriver.exe
 # Windows Path will be removed once tested on server
-#Exe_Path = /usr/bin/chromedriver
+Exe_Path = /usr/bin/chromedriver
 
 # Windows Path will be removed once tested on server
 #Excel_Path = ../test_data/TestData.xlsx
